--- a/WEB/static/index.html
+++ b/WEB/static/index.html
@@ -21,6 +21,10 @@
             <img src="Images/Permanent/gravsim.png" alt="Astrophysics" width="250">
             <a href="gravsim">Astrophysics Program</a>
         </li>
+        <li>
+            <img src="Images/Permanent/fluid.gif" alt="Fluid Simulation" width="250">
+            <a href="fluid">Fluid Simulation</a>
+        </li>
     </ul>
 </body>
 </html>
