--- a/WEB/static/fluid.html
+++ b/WEB/static/fluid.html
@@ -13,7 +13,12 @@
     <h1>Fluid Simulation</h1>
     <div class="container"><div class="text">
         <p>
-            ... to be added ...
+            This program simulates particles moving inside a closed box where they can effect eachother only within a certain range
+            the force of this effect is more pronounced the closer the particles are to eachother, you can see the total effect in an area
+            by looking at the colour of the pixels at that point. Red means that the "pressure" is greater than the average, and blue means the "pressure"
+            is less than the average. It is also black if there are no particles effecting that region at all.
+            You can reduce the area of effect and increase the gravity to more closely simulate liquids as well as decrease the gravity
+            and increase the area of effect to more closely simulate gasses. 
         </p>
     </div></div>
 
