--- a/WEB/static/index.html
+++ b/WEB/static/index.html
@@ -10,20 +10,28 @@
     <h1>Physics Programs</h1>
     <ul class="program-list">
         <li>
-            <img src="Images/Permanent/orbit.gif" alt="Orbital Mechanics" width="250">
-            <a href="orbit">Orbital Mechanics<br>Program</a>
+            <a href="orbit">
+                <img src="Images/Permanent/orbit.gif" href="orbit" alt="Orbital Mechanics" width="250">
+                Orbital Mechanics<br>Program
+            </a>
         </li>
         <li>
-            <img src="Images/Permanent/bounce.gif" alt="Springs and Dampers simulation" width="250">
-            <a href="bounce">Springs and Dampers<br>Program</a>
+            <a href="bounce">
+                <img src="Images/Permanent/bounce.gif" alt="Springs and Dampers simulation" width="250">
+                Springs and Dampers<br>Program
+            </a>
         </li>
         <li>
-            <img src="Images/Permanent/gravsim.png" alt="Astrophysics" width="250">
-            <a href="gravsim">Astrophysics Program</a>
+            <a href="gravsim">
+                <img src="Images/Permanent/gravsim.png" alt="Astrophysics" width="250">
+                Astrophysics Program
+            </a>
         </li>
         <li>
-            <img src="Images/Permanent/fluid.gif" alt="Fluid Simulation" width="250">
-            <a href="fluid">Fluid Simulation</a>
+            <a href="fluid">
+                <img src="Images/Permanent/fluid.gif" alt="Fluid Simulation" width="250">
+                Fluid Simulation
+            </a>
         </li>
     </ul>
 </body>
