--- a/WEB/static/aboutme.html
+++ b/WEB/static/aboutme.html
@@ -18,10 +18,10 @@
 
 
 <nav id="nav">
-    <a href="/aboutme">About Me</a>
-    <a href="/projects">Projects</a>
-    <a href="/contact">Contact</a>
-    <a href="/physicsPrograms">Physics Programs</a>
+    <a href="aboutme">About Me</a>
+    <a href="projects">Projects</a>
+    <a href="contact">Contact</a>
+    <a href="physicsPrograms">Physics Programs</a>
 </nav>
 
 <main id="main">
