--- a/WEB/static/projects.html
+++ b/WEB/static/projects.html
@@ -19,10 +19,10 @@
 </header>
 
 <nav id="nav">
-    <a href="/aboutme">About Me</a>
-    <a href="/projects">Projects</a>
-    <a href="/contact">Contact</a>
-    <a href="/physicsPrograms">Physics Programs</a>
+    <a href="aboutme">About Me</a>
+    <a href="projects">Projects</a>
+    <a href="contact">Contact</a>
+    <a href="physicsPrograms">Physics Programs</a>
 </nav>
 
 <main id="main">
