--- a/WEB/static/contact.html
+++ b/WEB/static/contact.html
@@ -19,6 +19,7 @@
 </header>
 
 <nav id="nav">
+    <a href="index">Home</a>
     <a href="aboutme">About Me</a>
     <a href="projects">Projects</a>
     <a href="contact">Contact</a>
