--- a/WEB/static/fluid.html
+++ b/WEB/static/fluid.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1><a href="physicsPrograms">Back</a></h1>
     <h1>Fluid Simulation</h1>
     <div class="container"><div class="text">
         <p>
