--- a/WEB/static/physicsPrograms.html
+++ b/WEB/static/physicsPrograms.html
@@ -7,6 +7,7 @@
     <title>Physics Programs</title>
 </head>
 <body>
+    <h1><a href="index">Home</a></h1>
     <h1>Physics Programs</h1>
     <ul class="program-list">
         <li>
