--- a/WEB/static/projects.html
+++ b/WEB/static/projects.html
@@ -36,10 +36,11 @@
                 <br><br>
                 <a href="https://drive.google.com/file/d/1bauO636nZ__BHxQCc6Zdxy-Gi6v_P6YE/view">Link to video</a>
                 <div class="video">
-                    <video width="50%" controls>
+                    <iframe src="https://drive.google.com/file/d/1bauO636nZ__BHxQCc6Zdxy-Gi6v_P6YE/preview" width="640" height="480" allow="autoplay"></iframe>
+                    <!-- <video width="50%" controls>
                         <source src="https://drive.google.com/file/d/1bauO636nZ__BHxQCc6Zdxy-Gi6v_P6YE/preview" type="video/mp4">
                         Your browser does not support the video tag.
-                    </video>
+                    </video> -->
                 </div>
                 <br>
             <h4><a href="https://github.com/TheWeeWum/codesforintship/tree/main/fields">Fields: Gravitational/Electrical Field Lines:</a></h4>
