changed projects page pertaining to the physics simnulations

--- a/WEB/static/projects.html
+++ b/WEB/static/projects.html
@@ -43,8 +43,11 @@
                     </video> -->
                 </div>
                 <br>
-            <h4><a href="https://github.com/TheWeeWum/codesforintship/tree/main/fields">Fields: Gravitational/Electrical Field Lines:</a></h4>
-            Designed and implemented a program to visualize gravitational, electrical, and magnetic fields of point charges on a 2D plane. The program features multithreading for optimized line drawing, a gradient representation to visualize field strength, and identification of Lagrange points. Practical applications include insights into the orbits, such as the James Webb Space Telescope's orbit around a Lagrange point. The program serves as a visual aid for better understanding physics concepts learned in coursework.
+            <h4><a href="physicsPrograms">Physics Programs</a></h4>
+            Created various physics simulations programs like a gravitational wave and field line visualizer, a fluid simulator, spring and damper simulation, and an orbital simulation.
+            This allowed me to hone my optimization skills as well as learn some new cool physics concepts! Feel free to check out the programs and give feedback for any others that might be cool to make!
+            <!-- <h4><a href="https://github.com/TheWeeWum/codesforintship/tree/main/fields">Fields: Gravitational/Electrical Field Lines:</a></h4>
+            Designed and implemented a program to visualize gravitational, electrical, and magnetic fields of point charges on a 2D plane. The program features multithreading for optimized line drawing, a gradient representation to visualize field strength, and identification of Lagrange points. Practical applications include insights into the orbits, such as the James Webb Space Telescope's orbit around a Lagrange point. The program serves as a visual aid for better understanding physics concepts learned in coursework. -->
                 <br>
             <h4><a href="https://github.com/TheWeeWum/codesforintship/tree/main/Chess">Chess Program:</a></h4>
             Developed a chess program, allowing users to explore valid moves, move pieces around the board, capture opponents' pieces, and eventually win by checkmating the king. Future goals include creating an advanced chess algorithm capable of self-competition and eventually training a neural network to beat the algorithm.
