changed formatting of links

--- a/WEB/static/projects.html
+++ b/WEB/static/projects.html
@@ -31,7 +31,7 @@
         <h2>Projects</h2>
         <p>
             <h4><a href="https://github.com/TheWeeWum/UniVerse">UniVerse (Java, UofT Mapping Software Upgrade):</a></h4>
-            <h2><a href="universe/index">see webpage</a></h2>
+            <h4><a href="universe/index">see webpage - not working yet</a></h4>
             Actively involved in a group project, UniVerse, as part of a computer science course at the University of Toronto. Our mission is to revamp the existing UofT map software. The enhanced program boasts increased speed, expanded functionality, and a visually appealing interface. UniVerse facilitates seamless navigation for students, allowing them to locate buildings using names or codes and obtain directions through Google Maps. Beyond navigation, the program incorporates a social dimension, enabling students to sign up, leave reviews on buildings or specific rooms, and curate a list of their favorite places. This project represents my commitment to addressing real-world challenges through innovative solutions, combining technical expertise with a user-centric approach.
                 <br><br>
                 <a href="https://drive.google.com/file/d/1bauO636nZ__BHxQCc6Zdxy-Gi6v_P6YE/view">Link to video</a>
